--- a/.env.development
+++ b/.env.development
@@ -1,2 +1,4 @@
-REACT_APP_BASE_URL=http://141.94.78.248:7750/
-REACT_APP_API_URL=http://141.94.78.248:7750/web/v1/
+REACT_APP_BASE_URL=http://localhost:8000/
+REACT_APP_API_URL=http://localhost:8000/web/v1/
+# REACT_APP_BASE_URL=http://141.94.78.248:7750/
+# REACT_APP_API_URL=http://141.94.78.248:7750/web/v1/
