--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "react-markdown": "^8.0.7",
     "react-mui-fileuploader": "^0.4.1",
     "react-number-format": "^4.9.4",
+    "react-open-weather": "^1.3.2",
     "react-organizational-chart": "^2.2.0",
     "react-otp-input-rc-17": "^2.4.1-minor",
     "react-pdf": "^6.2.2",
